# pem353-bender

./: .gitignore  CMakeLists.txt  README.md  programmersnotes.md
cmake/toolchains/: RPI4.cmake  raspberryPi.cmake
configs/: pemConfigs.json
include/: mqttPub.hpp
install/: install.sh  pem353.service  uninstall.sh
lib/jsonparser/: placeholder.txt
lib/mqttcpp/: placeholder.txt
lib/nlohmann/: CMakeLists.txt
lib/spdlog/: placeholder.txt
logs/: pemlog_2025-12-10.txt  pemlog_2025-12-12.txt
notes/: cmake.md  cpplanugage.md  programmersnotes.md  xcompilation.md
pem353-service/: control
scripts/: build_and_pack.sh
src/: CMakeLists.txt  application.cpp  configManager.cpp  main.cpp  mainold.cpp  modbusRTU.cpp  modbusRtu.cpp  modbusTCP.cpp  modbusTcp.cpp  mqttPub.cpp
src/include/: CMakeLists.txt  application.hpp  configManager.hpp  modbusRTU.hpp  modbusRtu.hpp  modbusTCP.hpp  modbusTcp.hpp  mqttPub.hpp  pemData.hpp
src/include/dataclasses/: CMakeLists.txt  loggerSettings.hpp  mbRtuSettings.hpp  mbTcpSettings.hpp  mqttPub.hpp  mqttPubSettings.hpp  pemData.hpp
xcompile/setup/: installxcompiler.sh
